Checked in some scripting bug fixes.